--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,4 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
+@use 'styles/variables' as *;
+@use 'styles/layout' as *;
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.custom-input{
+  border-radius: 5px;
+  height: 2.5rem;
+  width: 15rem;
+}
+
+.btn {
+  height: 2.5rem;
+  width: 9rem;
+  font-size: 1em;
+  cursor: pointer;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.btn-primary {
+  border: 1px solid $color-primary;
+  background-color: $color-primary;
+  color: white;
+}
+
+.btn-primary:hover {
+  background-color: white;
+  color: $color-primary;
+}
+
+.btn-secondary {
+  border: 1px solid black;
+  background-color: white;
+}
+
+.btn-secondary:hover {
+  background-color: $color-primary;
+  color: white;
+}
