--- a/front/src/app/pages/login/login.html
+++ b/front/src/app/pages/login/login.html
@@ -11,7 +11,7 @@
 
       <fieldset class="form-fields">
 
-        <label class="text-align-left" for="username">E-mail ou nom d'utilisateur</label>
+        <label class="text-align-left mt-md" for="username">E-mail ou nom d'utilisateur</label>
         <input id="username" type="text" class="custom-input" formControlName="login" />
 
         <label for="password" class="mt-md text-align-left">Mot de passe</label>
@@ -20,7 +20,7 @@
       </fieldset>
 
       @if (error) {
-        <p style="color:red">{{ error }}</p>
+        <p class="ui-error">{{ error }}</p>
       }
 
       <button type="submit" class="btn btn-primary mt-md">
