--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-//color
+// color
 $color-primary: #7550ec;
 
 /* Spacing */
@@ -6,3 +6,14 @@ $space-xs: 0.5rem;
 $space-sm: 1rem;
 $space-md: 1.5rem;
 $space-lg: 2rem;
+
+/* Sizing */
+$border-thin: 0.0625rem;
+$radius-sm: 0.3125rem;
+$radius-md: 0.625rem;
+
+$header-height: 4.375rem;
+$bp-md: 48rem;
+
+$container-lg: 75rem;
+$container-md: 48rem;
