--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,26 +1,34 @@
 @use 'styles/variables' as *;
 @use 'styles/layout' as *;
+@use 'styles/ui' as *;
 
-html, body { height: 100%; }
+html, body { height: 100%;overflow-x: hidden;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.custom-input{
-  border-radius: 5px;
+/* Inputs */
+.custom-input {
+  border-radius: $radius-sm;
   height: 2.5rem;
-  width: 15rem;
+  width: min(15rem, 100%);
+  font-size: 0.95rem;
 }
 
+.text-center{
+  text-align: center;
+}
+
+/* Buttons */
 .btn {
   height: 2.5rem;
-  width: 9rem;
-  font-size: 1em;
+  width: min(9rem, 100%);
+  font-size: 1rem;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: $radius-md;
   font-weight: bold;
 }
 
 .btn-primary {
-  border: 1px solid $color-primary;
+  border: $border-thin solid #f2f2f2;
   background-color: $color-primary;
   color: white;
 }
@@ -28,10 +36,22 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .btn-primary:hover {
   background-color: white;
   color: $color-primary;
+  border-color: $color-primary;
+}
+
+.btn-info {
+  border: $border-thin solid #c1c1c1;
+  background-color: #c1c1c1;
+  color: white;
+}
+
+.btn-info:hover {
+  background-color: white;
+  color: $color-primary;
 }
 
 .btn-secondary {
-  border: 1px solid black;
+  border: $border-thin solid black;
   background-color: white;
 }
 
