--- a/front/src/styles/_layout.scss
+++ b/front/src/styles/_layout.scss
@@ -1,4 +1,5 @@
 @use 'styles/variables' as *;
+
 .page {
   min-height: 100vh;
   display: flex;
@@ -8,12 +9,9 @@
 .page-content {
   display: flex;
   justify-content: center;
-  padding-top: 3rem;
 }
 
-.text-align-left{
-  text-align: left !important;
-}
+.text-align-left { text-align: left !important; }
 
 .center-page {
   min-height: 100vh;
@@ -28,38 +26,39 @@
   height: auto;
 }
 
-.form-wrapper {
-  text-align: center;
-}
+.form-wrapper { text-align: center; }
 
-/* =========================
-   CONTAINER
-========================= */
-
+/* CONTAINER */
 .container {
-  width: min(1200px, 100%);
+  width: min($container-lg, 100%);
   margin-inline: auto;
   padding-inline: $space-md;
 }
 
 .container-sm {
-  width: min(768px, 100%);
+  width: min($container-md, 100%);
   margin-inline: auto;
   padding-inline: $space-md;
 }
 
 .container-fluid {
   width: 100%;
-  padding-inline: $space-md;
+  padding-inline: 0;
 }
 
-/* =========================
-   GRID
-========================= */
-.grid-0 {
-  display: grid;
-  gap: 0;
+.px-page {
+  padding-inline: 1.5rem;
 }
+
+@media (max-width: 48rem) {
+  .px-page {
+    padding-inline: 0.75rem;
+  }
+}
+
+
+/* GRID */
+.grid-0 { display: grid; gap: 0; }
 
 .form-fields {
   display: grid;
@@ -68,10 +67,7 @@
   padding: 0;
 }
 
-.grid {
-  display: grid;
-  gap: $space-md;
-}
+.grid { display: grid; gap: $space-md; }
 
 .grid-center {
   display: grid;
@@ -86,18 +82,13 @@
 .grid-4 { grid-template-columns: repeat(4, 1fr); }
 
 /* Responsive */
-@media (max-width: 768px) {
-  .grid-2,
-  .grid-3,
-  .grid-4 {
-    grid-template-columns: 1fr;
-  }
+@media (max-width: $bp-md) {
+  .grid-2, .grid-3, .grid-4 { grid-template-columns: 1fr; }
 }
 
 /* font */
 .fs-md { font-size: $space-md; }
 .fs-lg { font-size: $space-lg; }
-
 
 /* spacing */
 .m-0 { margin: 0; }
