test(back): add post and user controller test

--- a/front/src/app/components/app-header/app-header.html
+++ b/front/src/app/components/app-header/app-header.html
@@ -10,12 +10,26 @@
         <a type="button" class="link logout" (click)="logout()">Se déconnecter</a>
         <a routerLink="/feed" routerLinkActive="active">Articles</a>
         <a routerLink="/topics" routerLinkActive="active">Thèmes</a>
-        <a class="profile" routerLink="/me" aria-label="Profil">
-          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#c1c1c1" class="bi bi-person-circle" viewBox="0 0 16 16">
-            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+        <a
+          class="profile"
+          routerLink="/me"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{ exact: true }"
+          aria-label="Profil"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            fill="currentColor"
+            class="bi bi-person-circle"
+            viewBox="0 0 16 16"
+          >
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.758 1.226 5.468 2.37A7 7 0 0 0 8 1" />
           </svg>
         </a>
+
       </nav>
 
       <!-- Mobile hamburger -->
@@ -32,5 +46,26 @@
       <a class="drawer-link" routerLink="/posts" (click)="closeMenu()">Articles</a>
       <a class="drawer-link" routerLink="/topics" (click)="closeMenu()">Thèmes</a>
     </aside>
+    @if (isLoggedIn$ | async){
+      <a
+        class="mobile-profile"
+        routerLink="/me"
+        routerLinkActive="active-link"
+        [routerLinkActiveOptions]="{ exact: true }"
+        aria-label="Profil"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="28"
+          height="28"
+          fill="currentColor"
+          class="bi bi-person-circle"
+          viewBox="0 0 16 16"
+        >
+          <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+          <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.758 1.226 5.468 2.37A7 7 0 0 0 8 1" />
+        </svg>
+      </a>
+    }
   }
 }
